--- a/app/styles/_services.scss
+++ b/app/styles/_services.scss
@@ -17,8 +17,8 @@
   .engagement-models {
 
     .service-description {
-      padding: $c-box-pad;
-      background-color: #fff;
+      padding: 0 0 0 $c-box-pad;
+      border-left: 1px solid #fff;
     }
   }
 }
