--- a/app/views/partials/company-profile.html
+++ b/app/views/partials/company-profile.html
@@ -1,4 +1,4 @@
-<section>
+<section class="container">
     <h1>Company Profile</h1>
     <p>
         Established at January 2009, 1 2 3 Completed is a leading System Integrator, Research and
