--- a/app/views/partials/copyright-notice.html
+++ b/app/views/partials/copyright-notice.html
@@ -1,87 +1,109 @@
-<section>
-    <h1>Copyright Notice</h1>
-    <h2>Legal Information</h2>
-    <p>
-        Copyright since 2009 1 2 3 Completed Corporation. All rights reserved. All documents and
-        information on any 1 2 3 Completed website are protected by copyright. Except as specifically
-        permitted herein, no portion of the documents or information on this website may be reproduced in
-        any form or by any means without the express written consent of 1 2 3 Completed.
-    </p>
-    <h2>License Disclaimer</h2>
-    <p>
-        Nothing on any 1 2 3 Completed website shall be construed as conferring any license under any
-        of 1 2 3 Completed&apos;s or any third party&apos;s intellectual property rights, whether by estoppel,
-        implication, or otherwise.
-    </p>
-    <h2>Content And Liability Disclaimer</h2>
-    <p>
-        1 2 3 Completed shall not be responsible for any errors or omissions contained on any 1 2 3
-        Completed website, and reserves the right to make changes anytime without notice. Mention of
-        non&ndash;1 2 3 Completed products or services is provided for informational purposes only and constitutes
-        neither an endorsement nor a recommendation by 1 2 3 Completed. All 1 2 3 Completed and third&ndash;party
-        information provided on any 1 2 3 Completed website is provided on an &quot;as is&quot; basis.
-    </p>
-    <p>
-        1 2 3 Completed DISCLAIMS ALL WARRANTIES, EXPRESSED OR IMPLIED, WITH REGARD TO ANY
-        INFORMATION (INCLUDING ANY SOFTWARE, PRODUCTS, OR SERVICES) PROVIDED ON ANY 1 2 3 Completed
-        WEBSITE, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE,
-        AND NON&ndash;INFRINGEMENT.
-    </p>
-    <p>
-        Some jurisdictions do not allow the exclusion of implied warranties, so the above exclusion
-        may not apply to you.
-    </p>
-    <p>
-        In no event shall 1 2 3 Completed be liable for any damages whatsoever, and in particular 1 2
-        3 Completed shall not be liable for direct, special, indirect, consequential, or incidental
-        damages, or damages for lost profits, loss of revenue or loss of use, cost of replacement goods,
-        loss or damage to data arising out of the use or inability to use any 1 2 3 Completed website, any
-        1 2 3 Completed product or service. This includes damages arising from use of or in reliance on the
-        documents or information present on any 1 2 3 Completed website (including any information posted
-        or placed by anyone other than 1 2 3 Completed), even if 1 2 3 Completed has been advised of the
-        possibility of such damages.
-    </p>
-    <h2>Feedback Information</h2>
-    <p>
-        Any information provided to 1 2 3 Completed in connection with any 1 2 3 Completed website
-        shall be provided by the submitter and received by 1 2 3 Completed on a non&ndash;confidential basis.
-        Such information shall be considered non&ndash;confidential and property of 1 2 3 Completed. By
-        submitting any such information to 1 2 3 Completed you agree to a no&ndash;charge assignment to 1 2 3
-        Completed of all worldwide rights, title, and interest in copyrights and other intellectual
-        property rights to the information. 1 2 3 Completed shall be free to use such information on an
-        unrestricted basis.
-    </p>
-    <h2>Trademarks</h2>
-    <p>
-        The trademarks, logos, and service marks (collectively &quot;Trademarks&quot;) appearing on the 1 2 3
-        Completed website are the property of 1 2 3 Completed and other parties. Nothing contained on the 1
-        2 3 Completed website should be construed as granting any license or right to use any Trademark
-        without the prior written permission of the party that owns the Trademark.
-    </p>
-    <h2>Links To Third&ndash;Party Sites</h2>
-    <p>
-        1 2 3 Completed prohibits the use of the 1 2 3 Completed LOGO as a &quot;hot&quot; link to any 1 2 3
-        Completed website unless the establishment of such a link is approved by 1 2 3 Completed
-        Corporation. 1 2 3 Completed websites may contain links to third&ndash;party sites. Access to any website
-        linked to any 1 2 3 Completed website is not the responsibility of 1 2 3 Completed and 1 2 3
-        Completed is not responsible for the accuracy, or reliability of any content on such websites.
-        Further, the presence of a link to a third&ndash;party site does not mean that 1 2 3 Completed endorses
-        that site, its products, or views expressed there. 1 2 3 Completed provides these links merely for
-        convenience and the presence of such third&ndash;party links are not an endorsement or recommendation by
-        1 2 3 Completed.
-    </p>
-    <h2>Governing Law And Jurisdiction</h2>
-    <p>
-        This 1 2 3 Completed website is controlled by 1 2 3 Completed from its offices in Tel&ndash;Aviv,
-        Israel. All matters relating to your access to, or use of any 1 2 3 Completed website shall be
-        governed by Israeli law or the laws of the city of Tel&ndash;Aviv. Any legal action or proceeding
-        relating to your access to or use of any 1 2 3 Completed website shall be instituted in a court in
-        the city of Tel&ndash;Aviv, Israel. You and 1 2 3 Completed agree to submit to the jurisdiction of, and
-        agree that venue is proper in these courts.
-    </p>
-    <p>
-        You may not access, download, use, or export information (including any software, products or
-        services) contained on this 1 2 3 Completed website in violation of any applicable laws or
-        regulations.
-    </p>
-</section>
+<div class="container">
+
+    <section>
+        <h1>Copyright Notice</h1>
+
+        <h2>Legal Information</h2>
+
+        <p>
+            Copyright since 2009 1 2 3 Completed Corporation. All rights reserved. All documents and
+            information on any 1 2 3 Completed website are protected by copyright. Except as specifically
+            permitted herein, no portion of the documents or information on this website may be reproduced in
+            any form or by any means without the express written consent of 1 2 3 Completed.
+        </p>
+
+        <h2>License Disclaimer</h2>
+
+        <p>
+            Nothing on any 1 2 3 Completed website shall be construed as conferring any license under any
+            of 1 2 3 Completed&apos;s or any third party&apos;s intellectual property rights, whether by estoppel,
+            implication, or otherwise.
+        </p>
+
+        <h2>Content And Liability Disclaimer</h2>
+
+        <p>
+            1 2 3 Completed shall not be responsible for any errors or omissions contained on any 1 2 3
+            Completed website, and reserves the right to make changes anytime without notice. Mention of
+            non&ndash;1 2 3 Completed products or services is provided for informational purposes only and constitutes
+            neither an endorsement nor a recommendation by 1 2 3 Completed. All 1 2 3 Completed and third&ndash;party
+            information provided on any 1 2 3 Completed website is provided on an &quot;as is&quot; basis.
+        </p>
+
+        <p>
+            1 2 3 Completed DISCLAIMS ALL WARRANTIES, EXPRESSED OR IMPLIED, WITH REGARD TO ANY
+            INFORMATION (INCLUDING ANY SOFTWARE, PRODUCTS, OR SERVICES) PROVIDED ON ANY 1 2 3 Completed
+            WEBSITE, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE,
+            AND NON&ndash;INFRINGEMENT.
+        </p>
+
+        <p>
+            Some jurisdictions do not allow the exclusion of implied warranties, so the above exclusion
+            may not apply to you.
+        </p>
+
+        <p>
+            In no event shall 1 2 3 Completed be liable for any damages whatsoever, and in particular 1 2
+            3 Completed shall not be liable for direct, special, indirect, consequential, or incidental
+            damages, or damages for lost profits, loss of revenue or loss of use, cost of replacement goods,
+            loss or damage to data arising out of the use or inability to use any 1 2 3 Completed website, any
+            1 2 3 Completed product or service. This includes damages arising from use of or in reliance on the
+            documents or information present on any 1 2 3 Completed website (including any information posted
+            or placed by anyone other than 1 2 3 Completed), even if 1 2 3 Completed has been advised of the
+            possibility of such damages.
+        </p>
+
+        <h2>Feedback Information</h2>
+
+        <p>
+            Any information provided to 1 2 3 Completed in connection with any 1 2 3 Completed website
+            shall be provided by the submitter and received by 1 2 3 Completed on a non&ndash;confidential basis.
+            Such information shall be considered non&ndash;confidential and property of 1 2 3 Completed. By
+            submitting any such information to 1 2 3 Completed you agree to a no&ndash;charge assignment to 1 2 3
+            Completed of all worldwide rights, title, and interest in copyrights and other intellectual
+            property rights to the information. 1 2 3 Completed shall be free to use such information on an
+            unrestricted basis.
+        </p>
+
+        <h2>Trademarks</h2>
+
+        <p>
+            The trademarks, logos, and service marks (collectively &quot;Trademarks&quot;) appearing on the 1 2 3
+            Completed website are the property of 1 2 3 Completed and other parties. Nothing contained on the 1
+            2 3 Completed website should be construed as granting any license or right to use any Trademark
+            without the prior written permission of the party that owns the Trademark.
+        </p>
+
+        <h2>Links To Third&ndash;Party Sites</h2>
+
+        <p>
+            1 2 3 Completed prohibits the use of the 1 2 3 Completed LOGO as a &quot;hot&quot; link to any 1 2 3
+            Completed website unless the establishment of such a link is approved by 1 2 3 Completed
+            Corporation. 1 2 3 Completed websites may contain links to third&ndash;party sites. Access to any website
+            linked to any 1 2 3 Completed website is not the responsibility of 1 2 3 Completed and 1 2 3
+            Completed is not responsible for the accuracy, or reliability of any content on such websites.
+            Further, the presence of a link to a third&ndash;party site does not mean that 1 2 3 Completed endorses
+            that site, its products, or views expressed there. 1 2 3 Completed provides these links merely for
+            convenience and the presence of such third&ndash;party links are not an endorsement or recommendation by
+            1 2 3 Completed.
+        </p>
+
+        <h2>Governing Law And Jurisdiction</h2>
+
+        <p>
+            This 1 2 3 Completed website is controlled by 1 2 3 Completed from its offices in Tel&ndash;Aviv,
+            Israel. All matters relating to your access to, or use of any 1 2 3 Completed website shall be
+            governed by Israeli law or the laws of the city of Tel&ndash;Aviv. Any legal action or proceeding
+            relating to your access to or use of any 1 2 3 Completed website shall be instituted in a court in
+            the city of Tel&ndash;Aviv, Israel. You and 1 2 3 Completed agree to submit to the jurisdiction of, and
+            agree that venue is proper in these courts.
+        </p>
+
+        <p>
+            You may not access, download, use, or export information (including any software, products or
+            services) contained on this 1 2 3 Completed website in violation of any applicable laws or
+            regulations.
+        </p>
+    </section>
+
+</div>
