--- a/app/views/partials/news-and-events.html
+++ b/app/views/partials/news-and-events.html
@@ -1,7 +1,10 @@
-<section class="news-section">
-    <h1>News &amp; Events</h1>
+<div class="container">
 
-    <h3 id="gigaspaces-partnership" class="title">Gigaspaces Technologies Partnership</h2>
+    <section class="news-section">
+        <h1>News &amp; Events</h1>
+
+        <h2 id="gigaspaces-partnership" class="title">Gigaspaces Technologies Partnership</h2>
+
         <p>
             123Completed, a leader in providing services to high-end software projects,
             has entered a partnership with GigaSpaces, a leading provider of application
@@ -14,19 +17,23 @@
             architecture, customer consultancy, and training.&quot;
         </p>
 
-        <h3 id="oracle-partnership" class="title">Oracle Partnership</h2>
-            <div class="date">22&ndash;November&ndash;2011</div>
-            <p>
-                Oracle announcement by Noam Wexer of 1 2 3 Completed and Oracle partnership
-                published:
-            </p>
-            <p>
-                &ldquo;Oracle is proud to have 123Completed as a training and
-                services provider. The relationship between Oracle and 123Completed experts
-                has proven itself for over 15 years now. We are happy to place any projects
-                in the safe hands of 123Completed&rdquo;
-            </p>
-            <p>
-                Noam Wexler, Oracle University Israel Director
-            </p>
-</section>
+        <h2 id="oracle-partnership" class="title">Oracle Partnership</h2>
+
+        <div class="date">22&ndash;November&ndash;2011</div>
+        <p>
+            Oracle announcement by Noam Wexer of 1 2 3 Completed and Oracle partnership
+            published:
+        </p>
+
+        <p>
+            &ldquo;Oracle is proud to have 123Completed as a training and
+            services provider. The relationship between Oracle and 123Completed experts
+            has proven itself for over 15 years now. We are happy to place any projects
+            in the safe hands of 123Completed&rdquo;
+        </p>
+
+        <p>
+            Noam Wexler, Oracle University Israel Director
+        </p>
+    </section>
+</div>
