--- a/app/views/partials/rnd-staff-augmentation.html
+++ b/app/views/partials/rnd-staff-augmentation.html
@@ -1,21 +1,24 @@
-<section class="pad-btm">
-    <h1>R&amp;D staff Augmentation</h1>
-    <p>
-        Our staff Augmentation program is unique by itself. We assist our customer by assigning the
-        appropriate developers/experts to fit the task/role in hand. We then provide full support
-        coverage to these teams/individuals in order to guarantee top quality of service of our personnel.
-    </p>
-</section>
+<div class="container">
 
-<section class="letter testimonial">
-    <blockquote>
-        Pontis seeks both quality and productivity. Our partnership with 1 2 3 Completed
-        provided us with a true R&amp;D partnership, expertise, great service and availability. 123
-        contributed significantly to our platform architecture and performance always keeping security in
-        mind. We at Pontis are happy to be a 1 2 3 completed reference and recommend 123 completed
-        services to all.
-    </blockquote>
-    <p class="ref">
-        Shachar Segev, CTO, Pontis.
-    </p>
-</section>
+    <section class="pad-btm">
+        <h1>R&amp;D staff Augmentation</h1>
+        <p class="island">
+            Our staff Augmentation program is unique by itself. We assist our customer by assigning the
+            appropriate developers/experts to fit the task/role in hand. We then provide full support
+            coverage to these teams/individuals in order to guarantee top quality of service of our personnel.
+        </p>
+    </section>
+
+    <section class="letter testimonial">
+        <blockquote>
+            Pontis seeks both quality and productivity. Our partnership with 1 2 3 Completed
+            provided us with a true R&amp;D partnership, expertise, great service and availability. 123
+            contributed significantly to our platform architecture and performance always keeping security in
+            mind. We at Pontis are happy to be a 1 2 3 completed reference and recommend 123 completed
+            services to all.
+        </blockquote>
+        <p class="ref">
+            Shachar Segev, CTO, Pontis.
+        </p>
+    </section>
+</div>
