--- a/app/views/partials/success-stories.html
+++ b/app/views/partials/success-stories.html
@@ -1,5 +1,8 @@
+<div class="container">
+
 <section class="pad-btm">
     <h1>Success Stories</h1>
+
     <p>
         We at 1 2 3 Completed are taking pride at our great customer relationships. Our customer&apos;s
         success is our success. We are working hand in hand with our customers in order to guarantee
@@ -10,7 +13,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.gigaspaces.com/">
-        <img src="/images/logos/companies/gigaspaces-testimonial.png" alt="GigaSpaces" width="180" height="40" />
+        <img src="/images/logos/companies/gigaspaces-testimonial.png" alt="GigaSpaces" width="180" height="40"/>
     </a>
     <blockquote>
         We are very pleased with <span class="nowrap">1 2 3 Completed</span>
@@ -30,7 +33,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.oracle.com/">
-        <img src="/images/logos/companies/oracle-testimonial.png" alt="Oracle" width="180" height="40" />
+        <img src="/images/logos/companies/oracle-testimonial.png" alt="Oracle" width="180" height="40"/>
     </a>
     <blockquote>
         I have been working with <span class="nowrap">1 2 3 Completed</span> experts
@@ -55,7 +58,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.pontis.com/">
-        <img src="/images/logos/companies/pontis-testimonial.png" alt="Pontis" width="180" height="40" />
+        <img src="/images/logos/companies/pontis-testimonial.png" alt="Pontis" width="180" height="40"/>
     </a>
     <!--
     <blockquote>
@@ -86,7 +89,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.zerto.com/">
-        <img src="/images/logos/companies/zerto-testimonial.png" alt="Zerto" width="180" height="40" />
+        <img src="/images/logos/companies/zerto-testimonial.png" alt="Zerto" width="180" height="40"/>
     </a>
     <blockquote>
         I would like to thank you for the high quality delivery of the .NET
@@ -101,7 +104,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.bphx.com/">
-        <img src="/images/logos/companies/bphx-testimonial.png" alt="BluePhoenix" width="180" height="40" />
+        <img src="/images/logos/companies/bphx-testimonial.png" alt="BluePhoenix" width="180" height="40"/>
     </a>
     <blockquote>
         BluePhoenix KMS had some very complex projects that required
@@ -132,7 +135,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.mobixell.com/">
-        <img src="/images/logos/companies/mobixell-testimonial.png" alt="Mobixell" width="180" height="40" />
+        <img src="/images/logos/companies/mobixell-testimonial.png" alt="Mobixell" width="180" height="40"/>
     </a>
     <blockquote>
         I wanted to thank you for the improvements in performance, you have
@@ -162,10 +165,11 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.tadirantele.com/">
-        <img src="/images/logos/companies/tadiran-telecom-testimonial.png" alt="Tadiran Telecom" width="180" height="40" />
+        <img src="/images/logos/companies/tadiran-telecom-testimonial.png" alt="Tadiran Telecom" width="180"
+             height="40"/>
     </a>
     <blockquote>
-        Thank you for the training. Considering the limited time given  for this
+        Thank you for the training. Considering the limited time given for this
         training it was an excellent overview and initial hands on experience.
     </blockquote>
     <p class="ref">
@@ -175,7 +179,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.comability.com/">
-        <img src="/images/logos/companies/comability-testimonial.png" alt="ComAbility" width="180" height="40" />
+        <img src="/images/logos/companies/comability-testimonial.png" alt="ComAbility" width="180" height="40"/>
     </a>
     <blockquote>
         After many years of experience with 1 2 3 Completed founders, it was
@@ -192,7 +196,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.orcainteractive.com/">
-        <img src="/images/logos/companies/orca-testimonial.png" alt="Orca Interactive" width="180" height="40" />
+        <img src="/images/logos/companies/orca-testimonial.png" alt="Orca Interactive" width="180" height="40"/>
     </a>
     <blockquote>
         I would like to thank you for your contribution to the significant
@@ -207,7 +211,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.correlsense.com/">
-        <img src="/images/logos/companies/correlsense-testimonial.png" alt="" width="180" height="40" />
+        <img src="/images/logos/companies/correlsense-testimonial.png" alt="" width="180" height="40"/>
     </a>
     <!--
     <blockquote>
@@ -230,7 +234,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.oraplayer.com/">
-        <img src="/images/logos/companies/oraplayer-testimonial.png" alt="" width="180" height="40" />
+        <img src="/images/logos/companies/oraplayer-testimonial.png" alt="" width="180" height="40"/>
     </a>
     <blockquote>
         During the development process when we at OraPlayer Ltd. had advanced
@@ -247,7 +251,7 @@
 
 <section class="letter testimonial">
     <a class="logo-ribbon" href="http://www.bphxkms.com/">
-        <img src="/images/logos/companies/dsk-testimonial.png" alt="" width="180" height="40" />
+        <img src="/images/logos/companies/dsk-testimonial.png" alt="" width="180" height="40"/>
     </a>
     <blockquote>
         DSKnowledge LTD is a leading provider and development house of
@@ -265,3 +269,4 @@
         Nir Lavion, CEO, DSKnowledge
     </p>
 </section>
+</div>
