--- a/app/views/partials/training.html
+++ b/app/views/partials/training.html
@@ -1,15 +1,17 @@
-<section class="pad-btm">
-    <h1>Training</h1>
+<div class="container">
+    <section>
+        <h1>Training</h1>
 
-    <p class="island">
-        1 2 3 Completed specializes in high quality training for the IT
-        workforce. While our responsibility is to teach Development Lifecycle
-        methodologies well as technology skills, our company's goal is to make
-        your staff better programmers and software architects. We have a very
-        unique course catalog with offerings ranging from short one-day
-        workshops to full immersion 30&ndash;day boot camps. Using our acquired
-        knowledge, we develop courseware for the latest methodologies &amp;
-        technologies on the market long before the educational departments in
-        those software companies develop their official courses.
-    </p>
-</section>
+        <p class="island">
+            1 2 3 Completed specializes in high quality training for the IT
+            workforce. While our responsibility is to teach Development Lifecycle
+            methodologies well as technology skills, our company's goal is to make
+            your staff better programmers and software architects. We have a very
+            unique course catalog with offerings ranging from short one-day
+            workshops to full immersion 30&ndash;day boot camps. Using our acquired
+            knowledge, we develop courseware for the latest methodologies &amp;
+            technologies on the market long before the educational departments in
+            those software companies develop their official courses.
+        </p>
+    </section>
+</div>
