--- a/app/styles/_banner.scss
+++ b/app/styles/_banner.scss
@@ -1,33 +1,16 @@
+
 .banner {
-  position: relative;
-  padding: 0 !important;
-
-  .photo,
-  .text {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-
-  .photo {
-    height: 100%;
-    background: url('/images/stock-photos/can-stock-photo_csp4071433.jpg') 50% 50% no-repeat;
-    //background: url('/images/stock-photos/can-stock-photo_csp0167406.jpg') 50% 50% no-repeat;
-    background-size: cover;
-    @include opacity(.8);
-  }
-
-  .text {
-    top: 70%;
-    height: 30%;
-    padding: 0 2em;
-    background-color: $c-123-color;
-    color: #fff;
-    font: $font-size-large * 1.4 lane;
-    line-height: 4;
-    @include opacity(.8);
-    //@include gradient-radial($c-main-gradient-bottom, transparent);
+  padding: $c-box-pad;
+  .carousel-inner {
+    height: $c-tile-height - $c-box-pad * 2;
+    border: 1px solid #fff;
+    box-shadow: 4px 6px 22px #ccc;
+    img {
+      width: 100%;
+    }
   }
 }
+
+
+
+
