--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -10,6 +10,7 @@ $c-color-base-05: #e6e6e6 !default;
 $c-color-base-06: #d6d6d6 !default;
 $c-color-base-07: #ffffff !default;
 $c-color-base-08: #244569 !default;
+$c-color-base-09: #13182a !default;
 
 
 
