--- a/app/styles/_staff.scss
+++ b/app/styles/_staff.scss
@@ -3,7 +3,7 @@
 
   .member {
     position: relative;
-    margin: 0 0 $grid-gutter-width;
+    margin: $grid-gutter-width 0 0;
     padding: $c-box-pad;
     border: 1px solid #eee;
     background-color: #f6f6f6;
