--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,8 +5,8 @@
 @import "images";
 @import "variables";
 @import "functions";
-/* sass overrides */
-@import "bootstrap-sass-override";
+/* libs overrides */
+@import "libs-override";
 /* libs */
 @import "bootstrap-sass/lib/bootstrap";
 //@import "../bower_components/font-awesome/scss/font-awesome"; // TODO test font awesome and utilize it
