--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,34 +1,39 @@
-<div class="container">
 
-    <!-- NOTE: tab-indexes 1-10 are reserved for first-level hooks -->
-    <a tabindex="1" title="to navigation" href="#main-nav" ng-hide="true">Jump To Navigation</a>
+<!-- NOTE: tab-indexes 1-10 are reserved for first-level hooks -->
+<a tabindex="1" title="to navigation" href="#main-nav" ng-hide="true">Jump To Navigation</a>
 
-
-    <div id="header-top" class="row">
-        <nav class="col-md-12">
-            <!-- NOTE: tab-indexes 51-70 are reserved for low priority links -->
-            <ul class="list-inline pull-right">
-                <li>
-                    <a tabindex="51" href="/news-and-events.html">News &amp; Events</a>
-                </li>
-                <li>
-                    <a tabindex="52" href="/job-opportunities.html">Job Opportunities</a>
-                </li>
-            </ul>
-        </nav>
+<div id="header-top">
+    <div class="container">
+        <div class="row">
+            <nav class="col-md-12">
+                <!-- NOTE: tab-indexes 51-70 are reserved for low priority links -->
+                <ul class="list-inline pull-right">
+                    <li>
+                        <a tabindex="51" href="/news-and-events.html">News &amp; Events</a>
+                    </li>
+                    <li>
+                        <a tabindex="52" href="/job-opportunities.html">Job Opportunities</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
+</div>
 
-    <div id="header-main" class="row">
-        <div class="col-md-3">
-            <a tabindex="6" href="/" class="logo">
-                <span class="one">123</span>
-                <span class="completed">completed</span>
-            </a>
-        </div>
-        <div class="col-md-9">
-            <!-- NOTE: tab-indexes 11-30 are reserved for main navigation -->
-            <main-navigation></main-navigation>
-        </div>
+<div id="header-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <a tabindex="6" href="/" class="logo">
+                    <span class="one">123</span>
+                    <span class="completed">completed</span>
+                </a>
+            </div>
+            <div class="col-md-9">
+                <!-- NOTE: tab-indexes 11-30 are reserved for main navigation -->
+                <main-navigation></main-navigation>
+            </div>
 
+        </div>
     </div>
 </div>
