--- a/app/views/partials/customers.html
+++ b/app/views/partials/customers.html
@@ -1,40 +1,44 @@
-<section>
-    <hgroup>
-        <h1>Our Customers</h1>
-        <h2>This is a partial list of our customers</h2>
-    </hgroup>
-    <ul class="fluid-list">
-        <li><a href="http://www.gigaspaces.com/" title="GigaSpaces">
-            <img src="/images/logos/companies/gigaspaces.png" alt="GigaSpaces" width="120" height="100" /></a></li>
-        <li><a href="http://www.vmware.com/" title="VMware">
-            <img src="/images/logos/companies/vmware.png" alt="VMware" width="120" height="100" /></a></li>
-        <li><a href="http://www.oracle.com/" title="Oracle">
-            <img src="/images/logos/companies/oracle.png" alt="Oracle" width="120" height="100" /></a></li>
-        <li><a href="http://www.hp.com/" title="Hewlett Packard">
-            <img src="/images/logos/companies/hp.png" alt="Hewlett Packard" width="120" height="100" /></a></li>
-        <li><a href="http://www.pontis.com/" title="Pontis">
-            <img src="/images/logos/companies/pontis.png" alt="Pontis" width="120" height="100" /></a></li>
-        <li><a href="http://www.mobixell.com/" title="Mobixell">
-            <img src="/images/logos/companies/mobixell.png" alt="Mobixell" width="120" height="100" /></a></li>
-        <li><a href="http://oraplayer.com/" title="OraPlayer">
-            <img src="/images/logos/companies/oraplayer.png" alt="OraPlayer" width="120" height="100" /></a></li>
-        <li><a href="http://www.johnbryce.com/" title="John Bryce Training Center">
-            <img src="/images/logos/companies/john-bryce_en.png" alt="John Bryce Training Center" width="120" height="100" /></a></li>
-        <li><a href="http://www.bphx.com/" title="BluePhoenix">
-            <img src="/images/logos/companies/bluephoenix.png" alt="BluePhoenix" width="120" height="100" /></a></li>
-        <li><a href="http://www.correlsense.com/" title="Correlsense">
-            <img src="/images/logos/companies/correlsense.png" alt="Correlsense" width="120" height="100" /></a></li>
-        <li><a href="http://www.zerto.com/" title="Zerto">
-            <img src="/images/logos/companies/zerto.png" alt="Zerto" width="120" height="100" /></a></li>
-        <li><a href="http://www.comability.com/" title="ComAbility">
-            <img src="/images/logos/companies/comability.png" alt="ComAbility" width="120" height="100" /></a></li>
-        <li><a href="http://www.novawind.com/" title="Novawind">
-            <img src="/images/logos/companies/novawind.png" alt="Novawind" width="120" height="100" /></a></li>
-        <li><a href="http://www.orcainteractive.com/" title="Orca Interactive">
-            <img src="/images/logos/companies/orca.png" alt="Orca Interactive" width="120" height="100" /></a></li>
-        <li><a href="http://www.bphxkms.com/" title="DSKnowledge">
-            <img src="/images/logos/companies/dsk.png" alt="DSKnowledge" width="120" height="100" /></a></li>
-        <li><a href="http://www.taldor.co.il/" title="Taldor">
-            <img src="/images/logos/companies/taldor.png" alt="Taldor" width="120" height="100" /></a></li>
-    </ul>
-</section>
+<div class="container">
+    <section>
+        <hgroup>
+            <h1>Our Customers</h1>
+
+            <h2>This is a partial list of our customers</h2>
+        </hgroup>
+        <ul class="fluid-list">
+            <li><a href="http://www.gigaspaces.com/" title="GigaSpaces">
+                <img src="/images/logos/companies/gigaspaces.png" alt="GigaSpaces" width="120" height="100"/></a></li>
+            <li><a href="http://www.vmware.com/" title="VMware">
+                <img src="/images/logos/companies/vmware.png" alt="VMware" width="120" height="100"/></a></li>
+            <li><a href="http://www.oracle.com/" title="Oracle">
+                <img src="/images/logos/companies/oracle.png" alt="Oracle" width="120" height="100"/></a></li>
+            <li><a href="http://www.hp.com/" title="Hewlett Packard">
+                <img src="/images/logos/companies/hp.png" alt="Hewlett Packard" width="120" height="100"/></a></li>
+            <li><a href="http://www.pontis.com/" title="Pontis">
+                <img src="/images/logos/companies/pontis.png" alt="Pontis" width="120" height="100"/></a></li>
+            <li><a href="http://www.mobixell.com/" title="Mobixell">
+                <img src="/images/logos/companies/mobixell.png" alt="Mobixell" width="120" height="100"/></a></li>
+            <li><a href="http://oraplayer.com/" title="OraPlayer">
+                <img src="/images/logos/companies/oraplayer.png" alt="OraPlayer" width="120" height="100"/></a></li>
+            <li><a href="http://www.johnbryce.com/" title="John Bryce Training Center">
+                <img src="/images/logos/companies/john-bryce_en.png" alt="John Bryce Training Center" width="120"
+                     height="100"/></a></li>
+            <li><a href="http://www.bphx.com/" title="BluePhoenix">
+                <img src="/images/logos/companies/bluephoenix.png" alt="BluePhoenix" width="120" height="100"/></a></li>
+            <li><a href="http://www.correlsense.com/" title="Correlsense">
+                <img src="/images/logos/companies/correlsense.png" alt="Correlsense" width="120" height="100"/></a></li>
+            <li><a href="http://www.zerto.com/" title="Zerto">
+                <img src="/images/logos/companies/zerto.png" alt="Zerto" width="120" height="100"/></a></li>
+            <li><a href="http://www.comability.com/" title="ComAbility">
+                <img src="/images/logos/companies/comability.png" alt="ComAbility" width="120" height="100"/></a></li>
+            <li><a href="http://www.novawind.com/" title="Novawind">
+                <img src="/images/logos/companies/novawind.png" alt="Novawind" width="120" height="100"/></a></li>
+            <li><a href="http://www.orcainteractive.com/" title="Orca Interactive">
+                <img src="/images/logos/companies/orca.png" alt="Orca Interactive" width="120" height="100"/></a></li>
+            <li><a href="http://www.bphxkms.com/" title="DSKnowledge">
+                <img src="/images/logos/companies/dsk.png" alt="DSKnowledge" width="120" height="100"/></a></li>
+            <li><a href="http://www.taldor.co.il/" title="Taldor">
+                <img src="/images/logos/companies/taldor.png" alt="Taldor" width="120" height="100"/></a></li>
+        </ul>
+    </section>
+</div>
