--- a/app/views/partials/partners.html
+++ b/app/views/partials/partners.html
@@ -1,17 +1,21 @@
-<section>
-    <h1>Our Partners</h1>
-    <ul class="fluid-list">
-        <li><a href="http://www.oracle.com/" title="Oracle">
-            <img src="/images/logos/companies/oracle.png" alt="Oracle" width="120" height="100" /></a></li>
-        <li><a href="http://www.gigaspaces.com/" title="GigaSpaces">
-            <img src="/images/logos/companies/gigaspaces.png" alt="GigaSpaces" width="120" height="100" /></a></li>
-        <li><a href="http://www.johnbryce.com/" title="John Bryce Training Center">
-            <img src="/images/logos/companies/john-bryce_en.png" alt="John Bryce Training Center" width="120" height="100" /></a></li>
-        <li><a href="http://www.bphx.com/" title="BluePhoenix">
-            <img src="/images/logos/companies/bluephoenix.png" alt="BluePhoenix" width="120" height="100" /></a></li>
-        <li><a href="http://www.correlsense.com/" title="Correlsense">
-            <img src="/images/logos/companies/correlsense.png" alt="Correlsense" width="120" height="100" /></a></li>
-        <li><a href="http://www.one1.co.il/" title="One1">
-            <img src="/images/logos/companies/one.png" alt="One1" width="120" height="100" /></a></li>
-    </ul>
-</section>
+<div class="container">
+
+    <section>
+        <h1>Our Partners</h1>
+        <ul class="fluid-list">
+            <li><a href="http://www.oracle.com/" title="Oracle">
+                <img src="/images/logos/companies/oracle.png" alt="Oracle" width="120" height="100"/></a></li>
+            <li><a href="http://www.gigaspaces.com/" title="GigaSpaces">
+                <img src="/images/logos/companies/gigaspaces.png" alt="GigaSpaces" width="120" height="100"/></a></li>
+            <li><a href="http://www.johnbryce.com/" title="John Bryce Training Center">
+                <img src="/images/logos/companies/john-bryce_en.png" alt="John Bryce Training Center" width="120"
+                     height="100"/></a></li>
+            <li><a href="http://www.bphx.com/" title="BluePhoenix">
+                <img src="/images/logos/companies/bluephoenix.png" alt="BluePhoenix" width="120" height="100"/></a></li>
+            <li><a href="http://www.correlsense.com/" title="Correlsense">
+                <img src="/images/logos/companies/correlsense.png" alt="Correlsense" width="120" height="100"/></a></li>
+            <li><a href="http://www.one1.co.il/" title="One1">
+                <img src="/images/logos/companies/one.png" alt="One1" width="120" height="100"/></a></li>
+        </ul>
+    </section>
+</div>
